DeveloperOrg/force-app/main/default/objects/book__c/book__c.object-meta.xml
<CustomObject>
    <label>book</label>
    <nameField>
        <label>book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>