DeveloperOrg/force-app/main/default/objects/book__c/fields/Auther_Name__c.field-meta.xml
<CustomField>
    <fullName>Auther_Name__c</fullName>
    <label>Auther Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>