DeveloperOrg/force-app/main/default/objects/book__c/fields/date_of_making__c.field-meta.xml
<CustomField>
    <fullName>date_of_making__c</fullName>
    <label>date of making</label>
    <type>Date</type>
</CustomField>