DeveloperOrg/force-app/main/default/objects/book__c/fields/Discount_On_Book__c.field-meta.xml
<CustomField>
    <fullName>Discount_On_Book__c</fullName>
    <label>Discount On Book</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>