DeveloperOrg/force-app/main/default/objects/book__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>state__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hydrabad</fullName>
            </value>
            <value>
                <fullName>Kammam</fullName>
            </value>
            <value>
                <fullName>chennai</fullName>
            </value>
            <value>
                <fullName>Madurai</fullName>
            </value>
            <value>
                <fullName>tirupati</fullName>
            </value>
            <value>
                <fullName>chittoor</fullName>
            </value>
            <value>
                <fullName>Banglore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>