DeveloperOrg/force-app/main/default/objects/book__c/validationRules/book.validationRule-meta.xml
<ValidationRule>
    <fullName>book</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Auther_Name__c )</errorConditionFormula>
    <errorDisplayField>Auther_Name__c</errorDisplayField>
    <errorMessage>auther name</errorMessage>
</ValidationRule>