DeveloperOrg/force-app/main/default/objects/book__c/validationRules/discount_of_Book.validationRule-meta.xml
<ValidationRule>
    <fullName>discount_of_Book</fullName>
    <active>true</active>
    <errorConditionFormula>Discount_On_Book__c &gt; 50</errorConditionFormula>
    <errorMessage>dis must be less than 50%</errorMessage>
</ValidationRule>