DeveloperOrg/force-app/main/default/objects/book__c/validationRules/Pages_Cannot_Be_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Pages_Cannot_Be_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK( Pages__c),
 Pages__c &lt;=0)</errorConditionFormula>
    <errorDisplayField>Pages__c</errorDisplayField>
    <errorMessage>Pages_Cannot_Be_Zero</errorMessage>
</ValidationRule>