DeveloperOrg/force-app/main/default/objects/book__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>date_of_making__c</columns>
    <columns>Auther_Name__c</columns>
    <columns>Discount_On_Book__c</columns>
    <columns>District__c</columns>
    <columns>Price__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>